--- a/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
+++ b/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
@@ -1,53 +1,55 @@
-log4j.rootCategory=DEBUG, stdout , R   
-   
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender   
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout   
-log4j.appender.stdout.layout.ConversionPattern=[QC] %p [%t] %C.%M(%L) | %m%n   
-    
-log4j.appender.R=org.apache.log4j.DailyRollingFileAppender   
-log4j.appender.R.File=D:/logs/qc.log   
-log4j.appender.R.layout=org.apache.log4j.PatternLayout   
-1log4j.appender.R.layout.ConversionPattern=%d-[TS] %p %t %c - %m%n   
-   
-log4j.logger.com.neusoft=DEBUG   
-log4j.logger.com.opensymphony.oscache=ERROR   
-log4j.logger.net.sf.navigator=ERROR   
-log4j.logger.org.apache.commons=ERROR   
-log4j.logger.org.apache.struts=WARN   
-log4j.logger.org.displaytag=ERROR   
-log4j.logger.org.springframework=DEBUG   
-log4j.logger.com.ibatis.db=WARN   
-log4j.logger.org.apache.velocity=FATAL   
-   
-log4j.logger.com.canoo.webtest=WARN   
-   
-log4j.logger.org.hibernate.ps.PreparedStatementCache=WARN   
-log4j.logger.org.hibernate=DEBUG   
-log4j.logger.org.logicalcobwebs=WARN  
+### set log levels ###  
+log4j.rootLogger = DEBUG , console , debug , error  
+  
+### console ###  
+log4j.appender.console = org.apache.log4j.ConsoleAppender  
+log4j.appender.console.Target = System.out  
+log4j.appender.console.layout = org.apache.log4j.PatternLayout  
+log4j.appender.console.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+  
+### log file ###  
+log4j.appender.debug = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.debug.File = D:/logs/INFO.log  
+log4j.appender.debug.Append = true  
+log4j.appender.debug.Threshold = INFO  
+log4j.appender.debug.layout = org.apache.log4j.PatternLayout  
+log4j.appender.debug.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+  
+### exception ###  
+log4j.appender.error = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.error.File = D:/logs/ERROR.log  
+log4j.appender.error.Append = true  
+log4j.appender.error.Threshold = ERROR  
+log4j.appender.error.layout = org.apache.log4j.PatternLayout  
+log4j.appender.error.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
 
-log4j.rootCategory=INFO, stdout , R
+### step ###  
+log4j.logger.step=INFO
+log4j.appender.step = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.step.File = D:/logs/step.log  
+log4j.appender.step.Append = true  
+log4j.appender.step.Threshold = INFO  
+log4j.appender.step.layout = org.apache.log4j.PatternLayout  
+log4j.appender.step.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+  
+### mybatis ###  
+log4j.logger.mybatis=INFO
+log4j.appender.mybatis = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.mybatis.File = D:/logs/mybatis.log  
+log4j.appender.mybatis.Append = true  
+log4j.appender.mybatis.Threshold = INFO  
+log4j.appender.mybatis.layout = org.apache.log4j.PatternLayout  
+log4j.appender.mybatis.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[QC] %p [%t] %C.%M(%L) | %m%n
- 
-log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=D:/logs/qc.log
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-1log4j.appender.R.layout.ConversionPattern=%d-[TS] %p %t %c - %m%n
-
-log4j.logger.com.neusoft=DEBUG
-log4j.logger.com.opensymphony.oscache=ERROR
-log4j.logger.net.sf.navigator=ERROR
-log4j.logger.org.apache.commons=ERROR
-log4j.logger.org.apache.struts=WARN
-log4j.logger.org.displaytag=ERROR
-log4j.logger.org.springframework=DEBUG
-log4j.logger.com.ibatis.db=WARN
-log4j.logger.org.apache.velocity=FATAL
-
-log4j.logger.com.canoo.webtest=WARN
-
-log4j.logger.org.hibernate.ps.PreparedStatementCache=WARN
-log4j.logger.org.hibernate=DEBUG
-log4j.logger.org.logicalcobwebs=WARN
+###需要声明，然后下方才可以使druid sql输出，否则会抛出log4j.error.key not found  
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
+log4j.appender.stdout.Target=System.out  
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %l %c%n%p: %m%n  
+  
+### druid sql ###  
+log4j.logger.druid.sql=warn,stdout  
+log4j.logger.druid.sql.DataSource=warn,stdout  
+log4j.logger.druid.sql.Connection=warn,stdout  
+log4j.logger.druid.sql.Statement=warn,stdout  
+log4j.logger.druid.sql.ResultSet=warn,stdout  
