--- a/henrybear1.0/src/log4j.properties
+++ b/henrybear1.0/src/log4j.properties
@@ -24,7 +24,7 @@ log4j.appender.error.layout = org.apache.log4j.PatternLayout
 log4j.appender.error.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
 
 ### step ###  
-log4j.logger.step=INFO
+log4j.logger.step=INFO , step
 log4j.appender.step = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.step.File = D:/logs/step.log  
 log4j.appender.step.Append = true  
@@ -45,7 +45,7 @@ log4j.appender.mybatis.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
 log4j.appender.stdout.Target=System.out  
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %l %c%n%p: %m%n  
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %l %c%n%p\: %m%n  
   
 ### druid sql ###  
 log4j.logger.druid.sql=warn,stdout  
