--- a/henrybear1.0/WebRoot/WEB-INF/web.xml
+++ b/henrybear1.0/WebRoot/WEB-INF/web.xml
@@ -3,9 +3,14 @@
     xmlns="http://java.sun.com/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    
+    <listener>
+    	<listener-class>com.henrybear.listener.WebListener</listener-class>
+    </listener>
+    
   <servlet>
-    <description>This is the description of my J2EE component</description>
-    <display-name>This is the display name of my J2EE component</display-name>
+    <description>HttpServiceHttp</description>
+    <display-name>HttpServiceHttp</display-name>
     <servlet-name>HttpServiceHttp</servlet-name>
     <servlet-class>com.henrybear.servlet.HttpServiceHttp</servlet-class>
   </servlet>
