--- a/henrybear1.0/src/log4j.properties
+++ b/henrybear1.0/src/log4j.properties
@@ -32,6 +32,15 @@ log4j.appender.step.Threshold = INFO
 log4j.appender.step.layout = org.apache.log4j.PatternLayout  
 log4j.appender.step.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
+### listener ###  
+log4j.logger.listener=INFO , listener
+log4j.appender.listener = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.listener.File = D:/logs/listener.log  
+log4j.appender.listener.Append = true  
+log4j.appender.listener.Threshold = INFO  
+log4j.appender.listener.layout = org.apache.log4j.PatternLayout  
+log4j.appender.listener.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+  
 ### mybatis ###  
 log4j.logger.mybatis=INFO
 log4j.appender.mybatis = org.apache.log4j.DailyRollingFileAppender  
