--- a/henrybear1.0/WebRoot/WEB-INF/web.xml
+++ b/henrybear1.0/WebRoot/WEB-INF/web.xml
@@ -7,6 +7,9 @@
     <listener>
     	<listener-class>com.henrybear.listener.WebListener</listener-class>
     </listener>
+    <listener>
+    	<listener-class>com.henrybear.listener.AttributeListener</listener-class>
+    </listener>
     
   <servlet>
     <description>HttpServiceHttp</description>
