增加utf-8编码过滤器

--- a/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
+++ b/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
@@ -33,22 +33,41 @@ log4j.appender.step.layout = org.apache.log4j.PatternLayout
 log4j.appender.step.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### listener ###  
-log4j.logger.listener=INFO , listener
+log4j.logger.listener=DEBUG , listener
 log4j.appender.listener = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.listener.File = D:/logs/listener.log  
 log4j.appender.listener.Append = true  
 log4j.appender.listener.Threshold = INFO  
 log4j.appender.listener.layout = org.apache.log4j.PatternLayout  
 log4j.appender.listener.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+    
+### filter ###  
+log4j.logger.filter=DEBUG , filter
+log4j.appender.filter = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.filter.File = D:/logs/filter.log  
+log4j.appender.filter.Append = true  
+log4j.appender.filter.Threshold = INFO  
+log4j.appender.filter.layout = org.apache.log4j.PatternLayout  
+log4j.appender.filter.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### mybatis ###  
-log4j.logger.mybatis=INFO
+log4j.logger.mybatis=DEBUG,mybatis
 log4j.appender.mybatis = org.apache.log4j.DailyRollingFileAppender  
 log4j.appender.mybatis.File = D:/logs/mybatis.log  
 log4j.appender.mybatis.Append = true  
 log4j.appender.mybatis.Threshold = INFO  
 log4j.appender.mybatis.layout = org.apache.log4j.PatternLayout  
 log4j.appender.mybatis.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
+  
+### servlet ###  
+log4j.logger.servlet=DEBUG,servlet
+log4j.appender.servlet = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.servlet.File = D:/logs/servlet.log  
+log4j.appender.servlet.Append = true  
+log4j.appender.servlet.Threshold = INFO  
+log4j.appender.servlet.layout = org.apache.log4j.PatternLayout  
+log4j.appender.servlet.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
+
 
 ###需要声明，然后下方才可以使druid sql输出，否则会抛出log4j.error.key not found  
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
