--- a/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
+++ b/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
@@ -5,75 +5,83 @@ log4j.rootLogger = DEBUG , console , debug , error
 log4j.appender.console = org.apache.log4j.ConsoleAppender  
 log4j.appender.console.Target = System.out  
 log4j.appender.console.layout = org.apache.log4j.PatternLayout  
-log4j.appender.console.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### log file ###  
 log4j.appender.debug = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.debug.File = D:/logs/INFO.log  
+log4j.appender.debug.File = D://logs/INFO.log  
 log4j.appender.debug.Append = true  
 log4j.appender.debug.Threshold = INFO  
 log4j.appender.debug.layout = org.apache.log4j.PatternLayout  
-log4j.appender.debug.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.debug.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### exception ###  
 log4j.appender.error = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.error.File = D:/logs/ERROR.log  
+log4j.appender.error.File = D://logs/ERROR.log  
 log4j.appender.error.Append = true  
 log4j.appender.error.Threshold = ERROR  
 log4j.appender.error.layout = org.apache.log4j.PatternLayout  
-log4j.appender.error.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.error.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
 
 ### step ###  
 log4j.logger.step=INFO , step
 log4j.appender.step = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.step.File = D:/logs/step.log  
+log4j.appender.step.File = D://logs/step.log  
 log4j.appender.step.Append = true  
 log4j.appender.step.Threshold = INFO  
 log4j.appender.step.layout = org.apache.log4j.PatternLayout  
-log4j.appender.step.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.step.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### listener ###  
 log4j.logger.listener=DEBUG , listener
 log4j.appender.listener = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.listener.File = D:/logs/listener.log  
+log4j.appender.listener.File = D://logs/listener.log  
 log4j.appender.listener.Append = true  
 log4j.appender.listener.Threshold = INFO  
 log4j.appender.listener.layout = org.apache.log4j.PatternLayout  
-log4j.appender.listener.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.listener.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
     
 ### filter ###  
 log4j.logger.filter=DEBUG , filter
 log4j.appender.filter = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.filter.File = D:/logs/filter.log  
+log4j.appender.filter.File = D://logs/filter.log  
 log4j.appender.filter.Append = true  
 log4j.appender.filter.Threshold = INFO  
 log4j.appender.filter.layout = org.apache.log4j.PatternLayout  
-log4j.appender.filter.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
+log4j.appender.filter.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n  
   
 ### mybatis ###  
 log4j.logger.mybatis=DEBUG,mybatis
 log4j.appender.mybatis = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.mybatis.File = D:/logs/mybatis.log  
+log4j.appender.mybatis.File = D://logs/mybatis.log  
 log4j.appender.mybatis.Append = true  
 log4j.appender.mybatis.Threshold = INFO  
 log4j.appender.mybatis.layout = org.apache.log4j.PatternLayout  
-log4j.appender.mybatis.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
+log4j.appender.mybatis.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
   
 ### servlet ###  
 log4j.logger.servlet=DEBUG,servlet
 log4j.appender.servlet = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.servlet.File = D:/logs/servlet.log  
+log4j.appender.servlet.File = D://logs/servlet.log  
 log4j.appender.servlet.Append = true  
 log4j.appender.servlet.Threshold = INFO  
 log4j.appender.servlet.layout = org.apache.log4j.PatternLayout  
-log4j.appender.servlet.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
-
+log4j.appender.servlet.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
+  
+### quartz ###  
+log4j.logger.quartz=DEBUG,quartz
+log4j.appender.quartz = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.quartz.File = D://logs/quartz.log  
+log4j.appender.quartz.Append = true  
+log4j.appender.quartz.Threshold = INFO  
+log4j.appender.quartz.layout = org.apache.log4j.PatternLayout  
+log4j.appender.quartz.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n 
 
 ###需要声明，然后下方才可以使druid sql输出，否则会抛出log4j.error.key not found  
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
 log4j.appender.stdout.Target=System.out  
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
-log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %l %c%n%p\: %m%n  
+log4j.appender.stdout.layout.ConversionPattern=%-d{ISO8601} %l %c%n%p\: %m%n  
   
 ### druid sql ###  
 log4j.logger.druid.sql=warn,stdout  
