--- a/henrybear1.0/.classpath
+++ b/henrybear1.0/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
@@ -19,15 +20,17 @@
 			<attribute name="owner.project.facets" value="jst.web.jstl"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/jar/mybatis-3.4.4/mybatis-3.4.4/mybatis-3.4.4.jar"/>
-	<classpathentry kind="lib" path="D:/jar/javax.servlet-5.1.12.jar"/>
-	<classpathentry kind="lib" path="D:/jar/dom4j-2.0.1.jar"/>
-	<classpathentry kind="lib" path="D:/jar/commons-beanutils-1.8.1.jar/commons-beanutils-1.8.1.jar"/>
-	<classpathentry kind="lib" path="D:/jar/commons-logging-4.0.6.jar/commons-logging-4.0.6.jar"/>
-	<classpathentry kind="lib" path="D:/jar/log4j-1.2.17/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="D:/jar/commons-digester3-3.2-bin/commons-digester3-3.2/commons-digester3-3.2.jar"/>
-	<classpathentry kind="lib" path="D:/jar/commons-collections4-4.1-bin/commons-collections4-4.1/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="D:/jar/quartz-2.2.3-distribution/quartz-2.2.3/lib/quartz-2.2.3.jar"/>
-	<classpathentry kind="lib" path="D:/jar/quartz-2.2.3-distribution/quartz-2.2.3/lib/quartz-jobs-2.2.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-1.8.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-digester3-3.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-4.0.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/dom4j-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/henrybear.util.1.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/javax.servlet-5.1.12.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mybatis-3.4.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/quartz-2.2.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/quartz-jobs-2.2.3.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
