--- a/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
+++ b/henrybear1.0/WebRoot/WEB-INF/classes/log4j.properties
@@ -77,6 +77,16 @@ log4j.appender.quartz.Threshold = INFO
 log4j.appender.quartz.layout = org.apache.log4j.PatternLayout  
 log4j.appender.quartz.layout.ConversionPattern = [%d{yyyy-MM-dd HH\:mm\:ss}][%t][%p]-[%c] %m%n
 
+### spring ###  
+log4j.logger.spring=DEBUG,spring
+log4j.appender.spring = org.apache.log4j.DailyRollingFileAppender  
+log4j.appender.spring.File = D://logs/spring.log  
+log4j.appender.spring.Append = true  
+log4j.appender.spring.Threshold = INFO  
+log4j.appender.spring.layout = org.apache.log4j.PatternLayout  
+log4j.appender.spring.layout.ConversionPattern = [%d{yyyy-MM-dd HH\:mm\:ss}][%t][%p]-[%c] %m%n
+
+
 ###需要声明，然后下方才可以使druid sql输出，否则会抛出log4j.error.key not found  
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender  
 log4j.appender.stdout.Target=System.out  
