--- a/henrybear1.0/src/env.properties
+++ b/henrybear1.0/src/env.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/pmdb?useUnicode=true&characterEncoding=utf-8&useSSL=false
-username=root
-password=
+url=jdbc:mysql://192.168.2.214:3306/pmdb?useUnicode=true&characterEncoding=utf-8&useSSL=false
+username=henry
+password=bear
